--- a/Next-rez/pom.xml
+++ b/Next-rez/pom.xml
@@ -116,33 +116,23 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
-            <version>2.17.0</version>
+            <version>2.17.2</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.17.0</version>
+            <artifactId>log4j-jpa</artifactId>
+            <version>2.17.2</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-web</artifactId>
-            <version>2.17.0</version>
+            <version>2.17.2</version>
         </dependency>  
         <dependency>
             <groupId>com.lmax</groupId>
             <artifactId>disruptor</artifactId>
             <version>3.4.4</version>
-        </dependency>      
-        <dependency>
-            <groupId>com.quartzdesk</groupId>
-            <artifactId>quartzdesk-api</artifactId>
-            <version>2.8.0</version>
-        </dependency>       
-        <dependency>
-            <groupId>org.graylog2.log4j2</groupId>
-            <artifactId>log4j2-gelf</artifactId>
-            <version>1.3.1</version>
-        </dependency>    
+        </dependency>        
     </dependencies>  
     <build>
         <finalName>rest</finalName>
@@ -200,6 +190,26 @@
                     </execution>
                 </executions>
             </plugin>
+            <!--plugin>
+                <groupId>com.ethlo.persistence.tools</groupId>
+                <artifactId>eclipselink-maven-plugin</artifactId>
+                <version>2.7.9.1</version>
+                <executions>
+                    <execution>
+                        <phase>process-classes</phase>
+                        <goals>
+                            <goal>weave</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>modelgen</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>modelgen</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin!-->
         </plugins>
     </build>
 </project>
