--- a/test.app.model/pom.xml
+++ b/test.app.model/pom.xml
@@ -12,6 +12,12 @@
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-entitymanager</artifactId>
+            <version>5.3.15.Final</version>
+        </dependency>
+        
+        <dependency>
             <groupId>io.swagger</groupId>
             <artifactId>swagger-annotations</artifactId>
             <version>1.5.24</version>
