--- a/Next-rez/pom.xml
+++ b/Next-rez/pom.xml
@@ -142,7 +142,13 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-web</artifactId>
             <version>2.17.2</version>
-        </dependency>  
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.17.0</version>
+        </dependency>
+            
         <dependency>
             <groupId>com.lmax</groupId>
             <artifactId>disruptor</artifactId>
