--- a/test.app.core/pom.xml
+++ b/test.app.core/pom.xml
@@ -21,6 +21,12 @@
             <version>2.12.4</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>javax.persistence-api</artifactId>
+            <version>2.2</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
