--- a/Next-rez/pom.xml
+++ b/Next-rez/pom.xml
@@ -36,7 +36,7 @@
         
         <dependency>
             <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-entitymanager</artifactId>
+            <artifactId>hibernate-core</artifactId>
             <version>5.3.15.Final</version>
         </dependency>
         
@@ -159,7 +159,16 @@
             <groupId>com.lmax</groupId>
             <artifactId>disruptor</artifactId>
             <version>3.4.4</version>
-        </dependency>        
+        </dependency>
+        
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.13</version>
+            <type>jar</type>
+        </dependency>
+                
+                                
     </dependencies>  
     <build>
         <finalName>rest</finalName>
@@ -184,14 +193,16 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
+            
+
+            <!--plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.6</version>
                 <configuration>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
-            </plugin>
+            </plugin!-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
