--- a/test.app.core/pom.xml
+++ b/test.app.core/pom.xml
@@ -27,6 +27,12 @@
             <version>2.2</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.17.2</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
