--- a/Next-rez/pom.xml
+++ b/Next-rez/pom.xml
@@ -19,6 +19,14 @@
         <failOnMissingWebXml>false</failOnMissingWebXml>
         <jakartaee>8.0</jakartaee>    
     </properties>
+        <repositories>
+        <repository>
+            <id>snapshots-repo</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <releases><enabled>false</enabled></releases>
+            <snapshots><enabled>true</enabled></snapshots>
+        </repository>
+    </repositories>
     <!-- DB H2 !-->
     <dependencies>
         <dependency>
@@ -91,6 +99,11 @@
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
             <type>jar</type>
+        </dependency>
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>TestJavaSphinx</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>javax</groupId>
@@ -170,9 +183,7 @@
             <groupId>edu.cmu.sphinx</groupId>
             <artifactId>sphinx4-data</artifactId>
             <version>5prealpha-SNAPSHOT</version>
-        </dependency>
-        
-        
+        </dependency> 
     </dependencies>  
     <build>
         <finalName>rest</finalName>
