--- a/Next-rez/pom.xml
+++ b/Next-rez/pom.xml
@@ -219,6 +219,11 @@
             <version>0.8.8</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>1.5.6</version>
+        </dependency>
     </dependencies>  
     <build>
         <finalName>rest</finalName>
