--- a/Next-rez/pom.xml
+++ b/Next-rez/pom.xml
@@ -345,6 +345,31 @@
                     </execution>
                 </executions>
             </plugin>
+                        <plugin>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.0.2</version>
+                <executions>
+                   <execution>
+                      <id>copy-resources</id>
+                      <phase>validate</phase>
+                      <goals>
+                         <goal>copy-resources</goal>
+                      </goals>
+                      <configuration>
+                         <outputDirectory>${project.build.directory}/allure-results</outputDirectory>
+                         <resources>
+                            <resource>
+                               <directory>src/test/resources</directory>
+                               <includes>
+                                  <include>environment.properties</include>
+                               </includes>
+                            </resource>
+                         </resources>
+                      </configuration>
+                   </execution>
+                </executions>
+             </plugin>
+            
         </plugins>
     </build>
 </project>
