--- a/Next-rez/pom.xml
+++ b/Next-rez/pom.xml
@@ -345,6 +345,7 @@
                     </execution>
                 </executions>
             </plugin>
+            <!-- Environment for Allure !-->
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
                 <version>3.0.2</version>
